Download service: Fix network status signal cache.

When network layer changes from offline->online->offline,
DeviceStatusListener may stuck in incorrect state. Because we use a
delayed callback to signal offline->online, if we immediately change
back to offline, the delay callback will still run.


Bug: 779142
Change-Id: Iede6830d5aa5d96818791f75a75f036724b72020
Reviewed-on: https://chromium-review.googlesource.com/741468
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513341}
Former-commit-id: f05e55f9b3bfe0e29bc6de2b5c60c32e4f7028b8